[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/scripts/inPauseControl.gd" type="Script" id=1]
[ext_resource path="res://game/images/bg/bgModalOverlayPreto.png" type="Texture" id=2]
[ext_resource path="res://game/images/bg/bgConfig.png" type="Texture" id=3]
[ext_resource path="res://game/images/buttons/button_close.png" type="Texture" id=4]
[ext_resource path="res://game/images/buttons/musica_on.png" type="Texture" id=5]
[ext_resource path="res://game/images/buttons/button_effects_on.png" type="Texture" id=6]
[ext_resource path="res://game/images/buttons/str_opcoes.png" type="Texture" id=7]
[ext_resource path="res://game/images/buttons/btn_sair_jogo_on.png" type="Texture" id=8]
[ext_resource path="res://game/images/buttons/btn_sair_jogo_off.png" type="Texture" id=9]

[node name="MarginContainer" type="MarginContainer"]
margin_right = 480.0
margin_bottom = 270.0

[node name="Control" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 270.0
script = ExtResource( 1 )

[node name="btBackground" type="TextureButton" parent="Control"]
margin_left = -4.0
margin_top = -7.0
margin_right = 485.0
margin_bottom = 279.0
texture_normal = ExtResource( 2 )
expand = true

[node name="bgModalMenu" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -96.0
margin_right = 111.0
margin_bottom = 36.0
texture = ExtResource( 3 )

[node name="btClose" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -165.0
margin_top = 56.0
margin_right = -150.0
margin_bottom = 71.0
texture_normal = ExtResource( 4 )

[node name="btMusic" type="TextureButton" parent="Control"]
margin_left = 148.0
margin_top = 132.0
margin_right = 330.0
margin_bottom = 154.0
texture_normal = ExtResource( 5 )

[node name="btEffects" type="TextureButton" parent="Control"]
margin_left = 148.0
margin_top = 92.0
margin_right = 330.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( -482.828, -234.569 )
texture_normal = ExtResource( 6 )

[node name="textConfig" type="TextureRect" parent="Control"]
margin_left = 149.0
margin_top = 57.0
margin_right = 213.0
margin_bottom = 76.0
texture = ExtResource( 7 )

[node name="btQuitGame" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -75.0
margin_right = 99.0
margin_bottom = -26.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[connection signal="pressed" from="Control/btBackground" to="Control" method="closeInConfig"]
[connection signal="pressed" from="Control/btClose" to="Control" method="closeInConfig"]
[connection signal="pressed" from="Control/btMusic" to="Control" method="changeMusic"]
[connection signal="pressed" from="Control/btEffects" to="Control" method="changeEffects"]
[connection signal="pressed" from="Control/btQuitGame" to="Control" method="quitGame"]
